--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,16 @@
             <artifactId>JvUtils</artifactId>
             <version>0.4.9-R3</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.12.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>4.32.1</version>
+        </dependency>
     </dependencies>
 
     <build>
