feat(web): 添加前端测试页面并优化接口参数处理 - 新增完整的API测试前端页面，包含用户搜索、信息查询、战斗历史和绑定管理功能 -优化BattleController和UserInfoController中的参数处理逻辑，将sid参数设为可选并添加默认值-  在BattleController中增加角色图标过滤方法，确保图标路径正确性  - 更新应用版本号从1.1到1.2，并配置静态资源路径指向新的前端页面 - 改进用户绑定逻辑，避免在sid为空时执行绑定查询操作 - 统一代码格式，修复Map声明中的泛型空格问题

--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,14 @@
 server:
   port: 8080
 
+spring:
+  application:
+    name: wzyd-view
+    version: 1.2
+  web:
+    resources:
+      static-locations: classpath:/dist
+
 data:
   path: ./data
   res: ./res
