--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>io.github.gdpl2112</groupId>
     <artifactId>wzryDp</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>1.3.1</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
